# R-ChFSI-Manuscript-Data

./: .gitignore  README.md
AuroraData/: README.md
AuroraData/complex/: collect.sh  collectMP.sh  plot.plt  plotChFSI.plt  plotMP.plt  plotMP2.plt  plotPerf.plt  plotPerfTot.plt
AuroraData/complex/bccmo/6x6x6/: 3600_100_900_FP32_false_false_true_STANDARD.out  3600_100_900_FP32_false_true_true_STANDARD.out  3600_100_900_FP32_true_true_true_STANDARD.out  3600_100_900_TF32_true_true_true_BF16.out  3600_100_900_TF32_true_true_true_STANDARD.out  3600_10_900_FP32_false_true_true_STANDARD.out  3600_10_900_FP32_true_true_true_STANDARD.out  3600_10_900_TF32_true_true_true_STANDARD.out  3600_110_900_FP32_false_true_true_STANDARD.out  3600_110_900_FP32_true_true_true_STANDARD.out  3600_110_900_TF32_true_true_true_STANDARD.out  3600_120_900_FP32_false_false_true_STANDARD.out  3600_120_900_FP32_false_true_true_STANDARD.out  3600_120_900_FP32_true_true_true_STANDARD.out  3600_120_900_TF32_true_true_true_BF16.out  3600_120_900_TF32_true_true_true_STANDARD.out  3600_20_900_FP32_false_false_true_STANDARD.out  3600_20_900_FP32_false_true_true_STANDARD.out  (+33 more)
AuroraData/real/: collect.sh  collectMP.sh  plot.plt  plotMP.plt  plotPerf.plt  plotPerfTot.plt
ToyExample/: CMakeLists.txt  README.md
ToyExample/data/: make_paper_plots.gp
ToyExample/examples/: plot_convergence.cpp
ToyExample/include/: chebyshev_filter.hpp  eigensolver.hpp  linalg.hpp  matrix.hpp  test_problems.hpp
ToyExample/src/: chebyshev_filter.cpp  eigensolver.cpp  linalg.cpp  test_problems.cpp
(+259 files in other folders)
